Fix page display on narrow viewports
Fix the problem causing left side of the page to become
inaccessible on narrow viewports.

--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@
 
 body {
     height: 100vh;
+    min-width: min-content;
     display: flex;
     flex-direction: column;
     background-color: #e7ca48;
